# livdoe

./: Cargo.toml  README.md
src/: controllers.rs  main.rs  service.rs
src/api/: mod.rs
src/api/clockin/: clock_contro.rs  do.rs  mod.rs
src/corel/: db.rs
src/service/: attendance.rs
