[package]
name = "livdoe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = "1.0.3"
poem-openapi = "1.0.3"
tokio =  { version = "1.12.0", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.5.9", default_features = false, features = ["runtime-tokio-native-tls", "macros", "postgres", "chrono"]}
once_cell = "1.8.0"
futures = "0.3.17"
chrono = { version = "0.4.19", features = ["serde"]}
anyhow = "1.0.44"
# 